[Add] Starting point of book_management practice

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /connect_test/.vs
 /connect_test/x64
 /connect_test/connect_test/x64
+/book_management/.vs/book_management/CopilotIndices
+/book_management/.vs/book_management/FileContentIndex
+/book_management/.vs
+/book_management/book_management/x64
+/book_management/x64
