[Add] Networking in cpp

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@
 /book_management/.vs
 /book_management/book_management/x64
 /book_management/x64
+/Cpp_network_n_db/connect_test/.vs/connect_test/v17
+/Cpp_network_n_db/connect_test/.vs/connect_test/CopilotIndices
+/Cpp_network_n_db/connect_test/.vs/connect_test/FileContentIndex
+/Cpp_network_n_db/connect_test/.vs
+/Cpp_network_n_db/connect_test/connect_test/x64
+/Cpp_network_n_db/connect_test/x64
+/Cpp_network_n_db/cpp_network_and_db/.vs/cpp_network_and_db/CopilotIndices
+/Cpp_network_n_db/cpp_network_and_db/.vs/cpp_network_and_db/FileContentIndex
+/Cpp_network_n_db/cpp_network_and_db/.vs/cpp_network_and_db/v17
+/Cpp_network_n_db/cpp_network_and_db/.vs
