[Add] Cpp, network and DB - implementing login request to server from client

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,12 @@
 /Cpp_network_n_db/cpp_network_and_db/.vs/cpp_network_and_db/FileContentIndex
 /Cpp_network_n_db/cpp_network_and_db/.vs/cpp_network_and_db/v17
 /Cpp_network_n_db/cpp_network_and_db/.vs
+/Cpp_network_n_db/cpp_network_and_db/cpp_network_and_db/x64
+/Cpp_network_n_db/cpp_network_and_db/x64
+/Cpp_network_n_db/cpp_network_and_db_client/.vs/cpp_network_and_db_client/CopilotIndices
+/Cpp_network_n_db/cpp_network_and_db_client/.vs/cpp_network_and_db_client/FileContentIndex
+/Cpp_network_n_db/cpp_network_and_db_client/.vs/cpp_network_and_db_client/v17
+/Cpp_network_n_db/cpp_network_and_db_client/cpp_network_and_db_client/x64
+/Cpp_network_n_db/socket_client/.vs/socket_client/CopilotIndices
+/Cpp_network_n_db/socket_client/.vs
+/Cpp_network_n_db/cpp_network_and_db_client/x64
