[Chore] Move book management practice project to practices folder

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@
 /Cpp_network_n_db/socket_client/.vs/socket_client/CopilotIndices
 /Cpp_network_n_db/socket_client/.vs
 /Cpp_network_n_db/cpp_network_and_db_client/x64
+/Cpp_network_n_db/socket_client/socket_client/x64
+/Practice/book_management/.vs/book_management/CopilotIndices
+/Practice/book_management/.vs
+/Practice/book_management/book_management/x64
+/Practice/book_management/x64
+/Cpp_network_n_db/socket_client/x64
